<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreerItemActivity"
    tools:showIn="@layout/activity_creer_item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="150dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/entrez_le_label" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="0dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="@+id/editTextLabel"
                tools:layout_editor_absoluteX="35dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textviewtag"
                    tools:text="    Tag :" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Space
                        android:layout_width="18dp"
                        android:layout_height="wrap_content" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="115dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButtonFaible"
                            android:layout_width="86dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/faible" />

                        <RadioButton
                            android:id="@+id/radiobuttonnormal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/normal" />

                        <RadioButton
                            android:id="@+id/radioButtonImportant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/important" />
                    </RadioGroup>

                </TableRow>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>